--- a/src/app/components/confirm.component.html
+++ b/src/app/components/confirm.component.html
@@ -1,6 +1,6 @@
 <mat-card color="accent">THANK YOU for registering!</mat-card>
 <mat-card>
-<mat-card>Name: {{this.result.currentMessage.source.name}}</mat-card>
-<mat-card>Email: {{data.email}}</mat-card>
-<mat-card>Address: {{this.address}}</mat-card>
+<mat-card>Name: {{this.result.currentMessage.source._value.name}}</mat-card>
+<mat-card>Email: {{this.data.currentMessage.source._value.email}}</mat-card>
+<mat-card>Address: {{this.data.currentMessage.source._value.address}}</mat-card>
 </mat-card>
